--- a/setup.cfg
+++ b/setup.cfg
@@ -6,13 +6,13 @@
 name = dataflow
 description = Add a short description here!
 author = Mikkel Vilstrup
-author-email = mv@raffle.ai
+author-email = mikkel@vilstrup.dk
 license = mit
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/DataAsCode/dataflow
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://github.com/DataAsCode/dataflow
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
