--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@
 
 [metadata]
 name = dataflow
+version = "1.0.0"
 description = Add a short description here!
 author = Mikkel Vilstrup
 author-email = mikkel@vilstrup.dk
