--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = dataflow
+name = dbflow
 version = "1.0.0"
 description = Add a short description here!
 author = Mikkel Vilstrup
@@ -11,9 +11,9 @@ author-email = mikkel@vilstrup.dk
 license = mit
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
-url = https://github.com/DataAsCode/dataflow
+url = https://github.com/DataAsCode/dbflow
 project-urls =
-    Documentation = https://github.com/DataAsCode/dataflow
+    Documentation = https://github.com/DataAsCode/dbflow
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
@@ -44,7 +44,7 @@ exclude =
 
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
-# `pip install dataflow[PDF]` like:
+# `pip install dbflow[PDF]` like:
 # PDF = ReportLab; RXP
 # Add here test requirements (semicolon/line-separated)
 testing =
@@ -54,10 +54,10 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 # console_scripts =
-#     script_name = dataflow.module:function
+#     script_name = dbflow.module:function
 # For example:
 # console_scripts =
-#     fibonacci = dataflow.skeleton:run
+#     fibonacci = dbflow.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
@@ -73,7 +73,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov dataflow --cov-report term-missing
+    --cov dbflow --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -111,4 +111,4 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 3.2.3
-package = dataflow
+package = dbflow
