--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@
 
 [metadata]
 name = dbflow
+version = 1.0.0
 description = Add a short description here!
 author = Mikkel Vilstrup
 author-email = mikkel@vilstrup.dk
@@ -30,7 +31,7 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = numpy; scipy; pandas; matplotlib; numpy; networkx; sqlalchemy; metaflow; schedule; netgraph; psycopg2
+install_requires = numpy; scipy; pandas; matplotlib; numpy; networkx; sqlalchemy; metaflow; schedule; netgraph; psycopg2;
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
